updated tables 1 and 4 for new pinc

--- a/output/raw-rosenbaum-table-cats-exp-TvC-updated-10-10.tex
+++ b/output/raw-rosenbaum-table-cats-exp-TvC-updated-10-10.tex
@@ -16,8 +16,8 @@
 \quad Males &      0.059 & \textbf{   50.000} & \textbf{   35.714} & 0.147 \\
 \midrule
 \textbf{Parental Income} & & & & \\
-\quad Females &  \textbf{    0.228} & \textbf{  100.000} & \textbf{   60.000} & \textbf{ 0.086} \\
-\quad Males &  \textbf{    0.445} & \textbf{  100.000} & \textbf{   60.000} & \textbf{ 0.001} \\
+\quad Females & \textbf{    0.283} & \textbf{  100.000} & \textbf{   75.000}  & \textbf{ 0.086} \\
+\quad Males &  \textbf{    0.157} & \textbf{  100.000} & \textbf{   37.500}  & 0.147 \\
 \midrule
 \textbf{Parenting} & & & & \\
 \quad Females &  \textbf{    0.274} & \textbf{  100.000} & \textbf{   80.000} & 0.602 \\
