--- a/gender-differences_memo_2018-06-13a_jlg.tex
+++ b/gender-differences_memo_2018-06-13a_jlg.tex
@@ -14,10 +14,10 @@
 \newcommand{\notindep}{\notorth}
 
 \externaldocument{abc_treatmenteffects_appendix}
-\pagenumbering{roman}
 
 \begin{document}
 
+\begin{comment}
 \noindent Jorge - story line unclear still! (We will soon be booted out) \textbf{[JLG: That would be sad, but we simply seem not to be understanding each other, or maybe I'm just incompetent. But I keep explaining the same thing and you keep asking the same questions. Maybe these samples are much more limited than expected, even when we have done so much to them!]}\\
 
 \noindent I am still looking for a clean story. At baseline, who is more disadvantaged boys or girls? In terms of:\\
@@ -101,15 +101,20 @@
 \noindent Before, we explained this using quality. A careful inspection of the data implies that baseline characteristics could be an explanation as well. \\ 
 
 \noindent Now, we discussed that it could very well be that both stories are there. But there's one big difference. Our information on quality is not good, while we have measures of disadvantage at baseline with which we can perform tests! So they both could be playing a role. As we discussed in person, it's going to be impossible to separate the stories in our sample or tell what's the strength for either.]}
+\end{comment}
 
 \pagebreak
 \doublespacing
 
+\pagebreak
+
+\begin{comment}
 \begin{center}
 \noindent {\centering \textbf{Memo: June 13, 2018}}
 \end{center}
 
-\noindent \textbf{[JJH: JORGE and Anna: I am becoming deeply frustrated by this process as I am sure both of you are I cannot get a coherent story.]} \textbf{[JLG: We are providing answers to your questions day and night based on the data. If we were so frustrated, we wouldn't put so many hours into this. You seem insulted from the work that we do. You said two nights ago: ``SO WHY is an expanding and clarifying story an endless loop.'' Please give us some credit. We are grateful for your comments, but let's try to bounce ideas. Didn't you teach me that careful work takes time and pain? Our scientific responsibility is to tell you what the data looks like, not to make things easy for us and make up a story that you would like. Some would do so and we never will.]}\\
+
+\noindent \textbf{[JJH: JORGE and Anna: I am becoming deeply frustrated by this process as I am sure both of you are I cannot get a coherent story.]} \textbf{[JLG: We are providing answers to your questions day and night based on the data. We are not frustrated. We are putting hours into clarifying this. You seem insulted from the work that we do. You said two nights ago: ``SO WHY is an expanding and clarifying story an endless loop.'' Please give us some credit. We are grateful for your comments, but let's try to bounce ideas. Didn't you teach me that careful work takes time and pain? Our scientific responsibility is to tell you what the data looks like, not to make things easy for us and make up a story that you would like. Some would do so and we never will.]}\\
 
 \noindent \textbf{[JJH: You say the treatment effect for family income is larger for BOYS.] [JLG: No. Baseline resources are greater but not the treatment effects.]}\\ 
 
@@ -135,7 +140,7 @@
 
 \noindent \textbf{[JJH: I just keep getting part of the story from you.] [JLG: Is this so true? Or we are trying to understand the data and this is a difficult problem? Also, given the questions that you are bringing up, you seem to know the story.]}\\
 
-\noindent \textbf{[JJH: I wont sign off unless we have a coherent story.] [JLG: We haven't asked you to sign off. We want to have a good study not a rotten publication. Francesconi may be in a rush. That's his deal, not ours.]}\\ 
+\noindent \textbf{[JJH: I wont sign off unless we have a coherent story.] [JLG: We haven't asked you to sign off. We want to have a good study not a rotten publication.]}\\ 
 
 \noindent \textbf{[JJH: As I said earlier the old draft from last month section 5 was frighteningly bad and has scared the hell out of me in regards to this paper.]} \textbf{[JLG: Is it constructive to bring this up now? As I said before, I am not sure why our work becomes so insulting to you. We worked and gave you a draft. You didn't like Section 5 and, as far as I am concerned, there's nothing bad about that. But we are coauthors and we can build a better Section 5 together. If the point is that we should take responsibility for writing a bad Section 5, then I am very happy to take it and move on. I thought writing a better Section 5 was part of the ``expanding and clarifying story,'' not that a section written months ago was going to disable us from moving on with the paper.]}\\
 
@@ -149,13 +154,60 @@
 
 \noindent \textbf{[JJH: More mothers work  For gorls more motherswor but home score goes down  on net worse off.]}  \textbf{[JLG/AZ: Yes, treatment induces mothers to work. For girls, the home scores actually go up. This is seen in Table 4 under "Parenting," in which girls dominate boys. For example, the average effect size is 0.274 (and statistically significant) for girls, but 0.060 for boys. Recall that HOME scores include a subscale that negatively rates punishment, and the boys preform poorly in this specific subscale.]}\\
 
-\noindent \textbf{[JJH: So its impossible to see if more fathers came home once child I nteatemt?]} \textbf{[JLG/AZ:It is possible to see if fathers are present. It is impossible to see their individual income. As we show in Tables D.57 and D.41 in the Appendix, treatment does not induce fathers to come back. For both boys and girls, the effect on father's presence after baseline is negative comparing to the control-group boys who stay at home. This is not consistent across ages though, indicating that fathers come and go in all subgroups. We verified in the data that indeed this is what is happening. Although we cannot formally disentangle the mediators of treatment, it seems that father's presence is not one of them.]}
+\noindent \textbf{[JJH: So its impossible to see if more fathers came home once child I nteatemt?]} \textbf{[JLG/AZ:It is possible to see if fathers are present. It is impossible to see their individual income. As we show in Tables D.57 and D.41 in the Appendix, treatment does not induce fathers to come back. For both boys and girls, the effect on father's presence after baseline is negative comparing to the control-group boys who stay at home. This is not consistent across ages though, indicating that fathers come and go in all subgroups. We verified in the data that indeed this is what is happening. Although we cannot formally disentangle the mediators of treatment, it seems that father's presence is not one of them.]}\\
+
+\noindent \textbf{[JJH: Jorge, at the risk of facing another explosion, let me repeat my question which I have asked repeatedly and have not had answers.] [JLG: Please see the answers below.]}\\ 
+
+\noindent \textbf{[JJH: Are family environments (other than HOME scores) changed by treatment?] [JLG: Yes. Apart from HOME scores, the other measure of family environment that we have is income. Both HOME scores and family income are positively affected by ABC/CARE.]} \\
+
+\noindent \textbf{[JJH: Is part of the better female treatment effects due to better environments at home for girls?] [JLG: Yes. Improved environments. Part of the better female treatment effects is due to the worse environments at home for girls than boys. The control-group boys are more advantaged than the control-group girls. This is consistent with there being more positive treatment effects for females.] [JJH: I keep asking the same question - Better environments for treatment-group girls?] [JLG: Yes. Read the answers. It says ``Yes. Improved environments.'']}\\
+
+\noindent \textbf{[JJH: More mothers induced to work for girls?] [JLG: Yes. A larger percentage of control boys have working mothers at baseline, so the treatment effects on maternal employment are generally larger for girls than for boys.] [JJH: Ah - an answer.]} \\
+
+\noindent \textbf{[JJH: more family income?] [JLG: Yes. The treatment results in more family income. This is shown in Tables 1 and 4. The effect on family income is larger for boys than for girls. Remember that more boys have fathers at home than girls. The fact that the treatment effect on maternal employment is larger for girls is not inconsistent with the treatment effect on family income being larger for boys.] [JJH: Male income income up and female employment up?] [JLG: No. This is based on mother. Father's data on income is garbage. It was less than 20 observations.]} \\
+
+\noindent \textbf{[JJH: More fathers coming back to an improved environment?] [JLG: No. Treatment does not induce fathers to ``come back,'' although families with fathers present are more advantaged along other measures, e.g., family income.] [JJH: OK.]} \\
+
+\noindent \textbf{[JJH: You said we did not know father's income at baseline When is father'€™s income measured?] [JLG: It is measured at ages 12 and 21, although there are very few observations (28 and 4, respectively).] [JJH: Use this! Are fathers working more.] [JLG: We do now know if they work more. And these are 28 and 4 observations. How can we use 4 observations? Even 28 is very very bad. We have 8 controls. This would not be serious and we cannot detect anything when we do it anyway.]} \\
+
+\noindent \textbf{[JJH: Do we know if father present at baseline? Yes or so it seems] [JLG: Yes. Whenever the paper refers to father's presence, it is at baseline.]}\\ 
+
+\noindent \textbf{[JJH: Do we know if fathers increase their presence at home if the son is in treatment?] [JLG: Fathers do not increase their presence at home if the son is in treatment. This is evident in Figure 1 of the old, submitted draft. This is attached.]}\\
+
+\noindent \textbf{[JJH: Do we know this question for daughters?] [JLG: Fathers do not increase their presence at home if the daughter is in treatment. It is actually the case that more fathers are home for control girls than treatment girls. This difference is only statistically significant at age 4.5 when 17\% of the treatment girls have fathers present (observed for 30 subjects) and 31\% of the control girls have fathers present (observed for 36 subjects). Please note that at this age, the number of observations of fathers present is very small.]}\\
+
+\noindent \textbf{[JJH:  Do we know differential treatment effects?] [JLG: As you can see in the previous answer, we don't have great measures of disadvantage after baseline. However, as Tables 1 and 4 show, ABC/CARE differentially affects parental income and parenting by gender. The effects on parental income are larger for boys than for girls. The effects on parenting are larger for girls than for boys.]}\\ 
+
+\noindent \textbf{[JJH: To what extent does treatment improve family incomes of treatment relative to control?] [JLG: This is displayed in Table 4 and the differential effect in Table 1.]}\\ 
+
+\noindent \textbf{[JJH: More mothers are INDUCED to work above baseline correct?] [JLG: Yes. Treatment increases maternal employment by about 10\%. A larger percent of control boys have working mothers at baseline, so the treatment effects on maternal employment are generally larger for girls than for boys.]}\\
+
+\noindent \textbf{[JJH: Is the greater family income of treatments from the mothers or the INCREASE in the presence of the father] [JLG:  When fathers stay at home, the family income increases. Unfortunately, we do not have good documentation of who this family income is coming from, so it is hard to determine the exact effect of the father. It is possible that the father provides additional income. It is also possible the father provides childcare (or additional relatives who can provide childcare) allowing the mothers to work more or in better jobs.]}\\
+
+\noindent \textbf{[JLG: We do not have gender of other siblings. Ideally, we would have a time series of the measure of disadvantage for each child. I think we both agree on that. But we don't have that. We do have: A time series of the home score, for which we do have results in the paper both in Table 1 and Table 4, which are by gender and comparing boys and girls. We call this "parenting" in the paper. Parental income:  which is an aggregate of mother's, father's and both mother and father income. The reason for using the different variables is that at different ages we observe different variables. For this we also present results by gender and comparing genders in Tables 1 and 4.]}
+
+\end{comment}
+
+\begin{center}
+\noindent {\centering \textbf{Memo: June 14, 2018}}
+\end{center}
+
+\noindent \textbf{[JJH: We want to know Why the Treatment effects are bigger for girls.] [JLG: Yes. I agree and the evidence indicates, as you pointed out yesterday, that the environments are improving more from girls than for boys. This in terms of growth.]}\\ 
+
+\noindent \textbf{[JJH: We know at baseline Girls are in worse circumstances.] [JLG: Yes.]}\\
+
+\noindent \textbf{[JJH: What we want to know is why they IMPROVE That involves analyses BEYOND baseline.] [JLG: Yes. Please see the following table. In terms of the environment of girls and boys we have the income and labor supply of their mother and the HOME scores (which include interaction with both the mother and the father, when the father is around). This is extracted from the paper, but maybe clearer when considered separately in this table which we can display in Section 5. This two aggregates post-baseline, as described in the table. The reason why we aggregate this is because else the estimates get very noisy.]}\\
 
 
+\noindent \textbf{[JJH: You seem bound and determined to stay at baseline and that's non-responsive to the questions of the referees and to fundamental curiosity and scientific discourse.] [JLG: No. I want to show post-baseline, as indicated in the previous table. Now, father's income come next.]}\\
 
+\noindent \textbf{[JJH: You are some saying 28 obersvations is too small It may be But please I understand samples may be small I understand you would like more So would I But please understand that a baseline only analysis is essentially unsatisfactory It does not  explain CHANGE except possibly through an interaction.] [JLG: Yes. But I think we should construct that story based on the Table above and not on father's income, for which you can see the results next. Now, one could ask why not add this to the aggregates in the Table above. The reason is that if we do so the number of observations drops so much and we are back in trouble.]}\\ 
 
+\noindent \textbf{[JJH: You seem to think I do not understand that you have analyzed baseline I do understand very well now although the writing in previous drafts was exceedingly unclear.] [JLG: No. I am just trying to clarify things for you when the questions come by, but I mean no disrespect.]}\\ 
 
+\noindent \textbf{[JJH: But now we need more however imperfect.] [JLG: I think that the parental income and HOME scores tell the story. .]}\\ 
 
+\noindent \textbf{[JJH: The story in 5 is weak and any fragments will help Read what I wrote carefully.] [JLG: .]}\\ 
 
 
 
