updating repo with gender differences with JJH edits 6/14

--- a/Appendices/Results_treatmenteffects.tex
+++ b/Appendices/Results_treatmenteffects.tex
@@ -4,7 +4,7 @@
 
 \subsection{Background Variables} \label{appendix:bvariables}
 
-\noindent We select three out of fourteen potential variables that best predict the relevant outcomes of interest, i.e. the outcomes we test treatment effects for. We list the fourteen variables in Table~\ref{tab:pselectvars} and bold the three we choose. In addition to these three variables, we account for a male indicator when computing estimates pooling males and females and a ABC/CARE indicator, to account for any difference in the programs---although we extensively document throughout the paper the similarities between them. 
+\noindent We select three out of fourteen potential variables that best predict the relevant outcomes of interest, i.e. the outcomes we test treatment effects for. We list the fourteen variables in Table~\ref{tab:pselectvars} and bold the three we choose. In addition to these three variables, we account for a male indicator when computing estimates pooling males and females and a ABC/CARE indicator, to account for any difference in the programs---although we extensively document throughout the paper the similarities between them.
 
 \singlespacing
 \input{output/controlsets}
@@ -136,7 +136,7 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 
 \subsection{Outcomes of Interest}
 
-\noindent Table \ref{tab:main-outcomes} lists the 95 main outcomes that we test in our main analysis. We reverse the outcomes for which we consider a negative treatment effect socially positive. \\
+\noindent Table \ref{tab:main-outcomes} lists the 95 outcomes that we test in our main analysis. We reverse the outcomes for which we consider a negative treatment effect socially positive. \\
 
 \singlespacing
 \input{output/abccare_outcomes_list}
@@ -160,9 +160,9 @@ Table~\ref{table:treatfactors} displays the results. Column (1) is the parameter
 \begin{sidewaystable}[!htpb]
 \begin{threeparttable}
 \caption{Treatment Effects on Latent Outcomes} \label{table:treatfactors}
-\centering 
+\centering
 \begin{tabularx}{22.5cm}{XcX}
-& \input{output/latent-tes-1000.tex} & 
+& \input{output/latent-tes-1000.tex} &
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
@@ -172,9 +172,9 @@ Table~\ref{table:treatfactors} displays the results. Column (1) is the parameter
 \end{sidewaystable}
 
 
-The results in  Columns (1) and (2) of Table~\ref{table:treatfactors} reflect that ABC/CARE has substantial market and non-market benefits across the life-cycle. Recall that this inference is valid for all individuals in the population for whom $\bm{B} \in \mathcal{B}_0$ (i.e.,\ are at considerable socio-economic disadvantage). The latents for each category have an in-sample mean of $0$ and standard deviation of $1$. 
+The results in  Columns (1) and (2) of Table~\ref{table:treatfactors} reflect that ABC/CARE has substantial market and non-market benefits across the life-cycle. Recall that this inference is valid for all individuals in the population for whom $\bm{B} \in \mathcal{B}_0$ (i.e.,\ are at considerable socio-economic disadvantage). The latents for each category have an in-sample mean of $0$ and standard deviation of $1$.
 
-The latent capturing measures of education increases by almost $1/2$ of a standard deviation for females even after accounting for baseline characteristics and attrition. For males, employment and hypertension are the latents that show the strongest improvement as a result of treatment. 
+The latent capturing measures of education increases by almost $1/2$ of a standard deviation for females even after accounting for baseline characteristics and attrition. For males, employment and hypertension are the latents that show the strongest improvement as a result of treatment.
 
 %In each table we also present one or two factors constructed with the methodology in Appendix~\ref{app:endogeneity}. The idea behind doing this is to recover a ``latent'' outcome summarizing the outcomes in the table (e.g., latent IQ across IQ from ages 2 to 5). That is, measure the latent outcome using outcomes at various ages as measures of this latent. Testing for treatment effects on this factor it is yet another alternative to summarize treatment effects across a block of outcomes. T
 \doublespacing
@@ -183,7 +183,7 @@ The latent capturing measures of education increases by almost $1/2$ of a standa
 
 \subsection{Non-parametric Tests}\label{app:subsection-nonparametric-tests}
 
-In the main paper, we present non-parametric tests with a more refined set of outcomes to remove extraneous outcomes and those that are not observed in CARE. Here, we display the same results with the full set of outcomes. 
+In the paper, we present non-parametric tests with a more refined set of outcomes to remove extraneous outcomes and those that are not observed in CARE. Here, we display the same results with the full set of outcomes.
 
 \begin{table}[h!]
 \centering
