--- a/heckman.bib
+++ b/heckman.bib
@@ -4910,6 +4910,24 @@
   Timestamp                = {2015.09.29}
 }
 
+@Article{Baker_etal_2008_Universal_Childcare_JPE,
+  Title                    = {Universal Childcare, Maternal Labor Supply, and Family Well-being},
+  Author                   = {Baker, Michael and Gruber, Jonathan and Milligan, Kevin},
+  Journal                  = {Journal of Political Economy},
+  Year                     = {2008},
+
+  Month                    = {August},
+  Note                     = {University of Chicago Press},
+  Number                   = {4},
+  Pages                    = {709-745},
+  Volume                   = {116},
+
+  Institution              = {Journal of Political Economy},
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2015.10.20},
+  Type                     = {Working Paper}
+}
+
 @Article{Baker_Gruber_etal_2008_JPE,
   Title                    = {Universal Child Care, Maternal Labor Supply, and Family Well-Being},
   Author                   = {Baker, Michael and Gruber, Jonathan and Milligan, Kevin},
@@ -4920,19 +4938,6 @@
   Number                   = {4},
   Pages                    = {709--745},
   Volume                   = {116}
-}
-
-@TechReport{Baker_etal_2005_Universal_Childcare_NBER,
-  Title                    = {Universal Childcare, Maternal Labor Supply, and Family Well-being},
-  Author                   = {Baker, Michael and Gruber, Jonathan and Milligan, Kevin},
-  Institution              = {National Bureau of Economic Research},
-  Year                     = {2005},
-  Month                    = {December},
-  Number                   = {11832},
-  Type                     = {Working Paper},
-
-  Owner                    = {Stallings_LLC},
-  Timestamp                = {2015.10.20}
 }
 
 @TechReport{Baker-Milligan_2013_Boy-Girl-Differences,
@@ -15803,16 +15808,23 @@ Welfare Reform Academy},
   Timestamp                = {2016.03.16}
 }
 
-@TechReport{Cascio_Schanzenbach_2013_ImpactsExpandingAccess,
+@Article{Cascio_Schanzenbach_2013_ImpactsExpandingAccess,
   Title                    = {The Impacts of Expanding Access to High-Quality Preschool Education},
   Author                   = {Cascio, Elizabeth U. and Schanzenbach, Diane Whitmore},
-  Institution              = {National Bureau of Economic Research},
+  Journal                  = {The Brookings Institution},
   Year                     = {2013},
-  Number                   = {19735},
-  Type                     = {Working Paper},
 
+  Month                    = {Fall},
+  Number                   = {2},
+  Pages                    = {127-192},
+  Volume                   = {47},
+
+  Institution              = {The Brookings Institution},
+  Organization             = {The Brookings Institution},
   Owner                    = {Jenni},
-  Timestamp                = {2015.09.25}
+  Publisher                = {Brookings Papers on Economic Activity, Economic Studies Program},
+  Timestamp                = {2015.09.25},
+  Type                     = {Working Paper}
 }
 
 @Article{Case_Fertig_etal_2005_JHE,
@@ -31453,7 +31465,7 @@ Welfare Reform Academy},
 @Unpublished{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished,
   Title                    = {The Life-Cycle Benefits of an Influential Early Childhood Program},
   Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e}},
-  Note                     = {Forthcoming},
+  Note                     = {Under Revision, Journal of Political Economy},
   Year                     = {2017},
 
   Owner                    = {Stallings_LLC},
@@ -81482,7 +81494,7 @@ Robinson, Lara Rachel},
   Volume                   = {14}
 }
 
-@TechReport{Goldman_etal_2015_Future-America-Model,
+@TechReport{Goldman_etal_2015_Future-Adult-Model,
   Title                    = {{The {Future Adult Model}: Technical Documentation}},
   Author                   = {Tysinger, Bryan and Ermini Leaf, Duncan and Goldman, Dana P.},
   Institution              = {Working Document},
