--- a/output/program-desc-abc-care.tex
+++ b/output/program-desc-abc-care.tex
@@ -5,7 +5,7 @@ Cohorts & 4 (ABC), 2 (CARE) \\
 $N$ & 58 treatment, 56 control (ABC) \\
 	& 17 treatment, 23 control (CARE) \\
 \midrule
-Eligibility & HRI $>$ 11 \\
+Eligibility & High Risk Index (HRI) $>$ 11 \\
 		& Biologically healthy \\
 \midrule
 Treatment years & 1972--1981 (ABC), 1977--1983 (CARE) \\
@@ -15,7 +15,7 @@ Home visits 	& 2.5--2.7	per month (CARE)	\\
 Center care	& 50	weeks per year \\
 		 	& 30--45 hours per week  \\
 Other treatment components & Formula until 6 months\\
-					& Diapers until 6 months \\ 
+					& Diapers until 6 months \\
 					& Health check-ups \\
 					& Medical care \\
 					& Parenting instruction \\
