--- a/Appendices/Background_treatmenteffects.tex
+++ b/Appendices/Background_treatmenteffects.tex
@@ -46,7 +46,9 @@
 Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more determined eligibility \citep{Ramey_Smith_1977_AJMD, Ramey_Campbell_1984_AJMD,Ramey_Campbell_1991_childreninpoverty,Ramey_Campbell_etal_2000_ADS}. The weighting scale aimed to establish the relative importance of each item in the index \citep{Ramey_Smith_1977_AJMD}. Race was not  considered for eligibility; however, 98\% of the families who agreed to participate were African American \citep{Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR}.
 \end{table}
 
-\noindent The HRI for CARE was similar to that of ABC---it also contained 13 weighted variables and a score of 11 or above was required to be considered eligible. The items for maternal and paternal education levels have the same categories and weights as the ABC HRI. The other identical items are having an absent father,  school-age siblings performing lower than the norm based on grade-level or achievement tests, a record of father's unstable job history or unskilled labor, social agencies indicating a high level of need, and other circumstances related to cultural or social disadvantage. The specification of the following items were changed between the ABC and CARE HRI. The weight associated with household income depended on the number of individuals in the family for CARE and the income categories range from less than \$11,327.08 to \$76,457.80 (2014 USD) or more. In the CARE HRI, it is asked if payments were received from welfare agencies in the past 5 years instead of the past 3 years. Similarly, it asks if any family member has sought counseling in the past 5 years instead of the past 3 years. The threshold for maternal or paternal IQ is 85 in the CARE HRI instead of 90 as in the ABC HRI.  It does not have an item related to the absence of maternal relatives in the area, but replaces that item with asking if any member of the mother or father's immediate family has received services for the mentally disabled (the weight for this item is 3).\footnote{\citet{Ramey_etal_1985_Project-CARE_TiECSE}.} \\
+\noindent The HRI for CARE was similar to that of ABC---it also contained 13 weighted variables and a score of 11 or above was required to be considered eligible. The items for maternal and paternal education levels have the same categories and weights as the ABC HRI. The other identical items are having an absent father,  school-age siblings performing lower than the norm based on grade-level or achievement tests, a record of father's unstable job history or unskilled labor, social agencies indicating a high level of need, and other circumstances related to cultural or social disadvantage. \\
+
+The specification of the following items were changed between the ABC and CARE HRI. The weight associated with household income depended on the number of individuals in the family for CARE and the income categories range from less than \$11,327.08 to \$76,457.80 (2014 USD) or more. In the CARE HRI, it is asked if payments were received from welfare agencies in the past 5 years instead of the past 3 years. Similarly, it asks if any family member has sought counseling in the past 5 years instead of the past 3 years. The threshold for maternal or paternal IQ is 85 in the CARE HRI instead of 90 as in the ABC HRI.  It does not have an item related to the absence of maternal relatives in the area, but replaces that item with asking if any member of the mother or father's immediate family has received services for the mentally disabled (the weight for this item is 3).\footnote{\citet{Ramey_etal_1985_Project-CARE_TiECSE}.} \\
 
 \noindent All subjects were substantially disadvantaged (see Figure~\ref{figure:hridistabc} and Figure~\ref{figure:hridistcare}). Maternal age when the subject was born was, on average, 19.9 years in ABC and 21.1 years in CARE. Approximately half of the mothers of both treatment-group and control-group subjects in ABC were 19 years or younger and one third were 17 years or younger. In CARE, approximately half of the mothers of both treatment-group and control-group subjects were 20 years or younger and one third were 17.2 years or younger.  Mean maternal IQ score in ABC was approximately 85, one standard deviation below the national mean. In CARE, the mean maternal IQ score was approximately 87. Only 25\% of the ABC subjects lived with both biological parents, and more than 50\% lived with extended families in multi-generational households (61\% of treatment-group subjects and 56\% of control-group subjects).\footnote{\citet{Ramey_Campbell_1991_childreninpoverty,Campbell_Ramey_1994_CD}.} About 79\% of subjects did not have a father in the home in both ABC and CARE. \\
 
@@ -180,11 +182,11 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 
 \noindent Teachers had graduate-level education, training in special education, \textit{or} were qualified to act as consultants for in-school teachers to address any problems that arose.\footnote{\cite{Ramey_Campbell_1991_childreninpoverty}.} They met with parents at home and with teachers in the schools to deliver new activities for the parents to complete with their children and discuss the child's level of success with the previous set of activities. In addition, they helped parents with issues such as adult literacy, housing, and medical care. Thus, the teacher had a dual role as a parent educator and an advocate for the subject in their educational institution.
 
-\subsection{Control Substitution}\label{app:control-subbb}
+\subsection{Control Group Substitution}\label{app:control-subbb}
 
-\noindent In ABC, the families of $75\%$ of the control-group subjects enrolled their children in alternative center-based childcare. In CARE, $74\%$ of families in the control group and $62\%$ of families in the family education group enrolled their children in alternative center-based childcare. We refer to this phenomenon as control substitution; accounting for it is fundamental when evaluating the program. In this Appendix, we thoroughly describe the characteristics and costs of the childcare centers providing alternative treatment, in order to create a comparison with the treatments offered by ABC and CARE.\\
+\noindent In ABC, the families of $75\%$ of the control-group subjects enrolled their children in alternative center-based childcare. In CARE, $74\%$ of families in the control group and $62\%$ of families in the family education group enrolled their children in alternative center-based childcare. We refer to this phenomenon as control substitution; accounting for it is fundamental when evaluating the program.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_2001_EJ}, and \cite{Kline_Walters_2016_QJE}.} In this Appendix, we thoroughly describe the characteristics and costs of the childcare centers providing alternative treatment, in order to create a comparison with the treatments offered by ABC and CARE.\\
 
-\noindent Most of the families in the ABC and CARE control groups enrolled their children in alternative preschool that received federal subsidies and, therefore, were regulated. Figure~\ref{fig:ccabc} and Figure~\ref{fig:cccare} show the amount of enrollment into subsidized and non-subsidized care for ABC and CARE, respectively. Subsidized centers were required to have trained staff who were able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} Thus, we consider these centers to offer high-quality center-based childcare.
+\noindent Most of the families in the ABC and CARE control groups enrolled their children in alternative preschool that received federal subsidies and, therefore, were regulated. Figure~\ref{fig:ccabc} and Figure~\ref{fig:cccare} show the amount of enrollment into subsidized and non-subsidized care for ABC and CARE, respectively. Subsidized centers were required to have trained staff who were able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} Thus, we consider these centers to offer low-quality center-based childcare. \textbf{[JJH: Jorge, this is not quite consistent with our text--we call all of them low quality] [JLG: You are right and this is outdated. I have updated the sentence.]}
 
 	\begin{figure}[H]
 		\caption{Average Number of Months in Alternative Preschool, ABC Control Group} \label{fig:ccabc}
@@ -204,7 +206,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 \noindent Note: This figure describes the take-up of alternative preschool by families in the CARE family education and control groups. The vertical axis represents the average number of months per year the subjects of the control group spent in alternative preschool. Subsidized centers were highly regulated and, therefore, relatively high-quality. Non-subsidized childcare services were center-based but not regulated. Other sources of childcare could have included care by parents, relatives, or non-relatives.}
 	\end{figure}
 	
-Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
+Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. \textbf{[JJH: What are the treatment effects for high quality versus low quality care?] [JLG: We did try this, but it's honestly impossible to get something useful because the cells get so thin. Even thinner if you consider that we need to split by gender and we have missing information in quality for a third of the sample.]} The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
 
 \begin{sidewaystable}[H]
 \centering
@@ -212,7 +214,7 @@ Table~\ref{table:controlsubscharacteristics} shows baseline characteristics betw
 \caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
 \input{output/abccare_baseline_P}
 \begin{tablenotes}
-\item \footnotesize \textbf{Note:} This table describes baseline characteristics for the children in the control group, by gender and by their enrollment in alternative childcare. The number of subjects in these groups are listed at the top of the table. Asymptotic standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. In Table~\ref{tab:abccare-baseline}, we jointly test for baseline differences between males and females and between treatment- and control-group children, accounting for multiple hypotheses, and find that none of the $p$-values remain significant after this adjustment.
+\item \footnotesize \textbf{Note:} This table describes baseline characteristics for the children in the control group, by gender and by their enrollment in alternative childcare. The number of subjects in these groups are listed at the top of the table. Asymptotic standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. In the main text, we jointly test for baseline differences between males and females and between treatment- and control-group children, accounting for multiple hypotheses, and find that none of the $p$-values remain significant after this adjustment.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -268,6 +270,8 @@ Note: The starred ratios represent the ones we believe were the most relevant fo
 \end{threeparttable}
 \end{table}
 
+\textbf{[JJH: Jorge, this is really highly competent]}
+
 \subsubsection{Costs}
 % Need citations
 \noindent Previous papers have used childcare cost rates that are not specific to North Carolina and do not account for the contemporaneous structure of the subsidies. We use the local subsidy rates that were in place when the ABC subjects were in preschool to impute different costs of the alternative preschools. These costs depend on the specific preschool attended and the eligibility of the families to receive the subsidies. \\
@@ -322,7 +326,7 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 \input{output/crime_balance}
 \end{comment}
 
-\noindent Finally, we compare the observed, baseline characteristics between the children in the first-phase treatment, restricting the sample to the children for whom we have information on the age-34 medical data collection.
+\noindent Finally, we compare the observed, baseline characteristics between the children in the first-phase treatment, restricting the sample to the children for whom we have information on the age-34 medical data collection. \textbf{[JJH: Why carrow so many age ``0'' levels?] [JLG: I worry that the referees are skeptical about the pureness of the randomization protocol and that's why we are including as many evidence as possible on baseline balance. If you prefer we can place in a holding tank.]}
 
 \input{output/health_balance}
 
