--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -13,7 +13,7 @@
 \newcommand{\notorth}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
 \newcommand{\notindep}{\notorth}
 
-\externaldocument{abc_treatmenteffects_appendix}
+\externaldocument{abc_treatmenteffects_appendix_2018-06-13a_sjs}
 \pagenumbering{roman}
 
 \begin{document}
@@ -21,7 +21,7 @@
 \begin{titlepage}
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
-\title{\Large \textbf{Gender Differences in\\ the Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, Elizabeth Gunn, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. They also assisted with information on the implementation of the studied interventions. Years of partnership and collaboration have made this work possible. We thank Ruby Zhang for excellent research assistance. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, and Jake Torcasso on related work has strengthened the analysis in this paper. For helpful comments on various versions of the paper, we thank the editor, three anonymous referees, St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Marco Francesconi, Dana Goldman, Ganesh Karapakula, Sidharth Moktan, Rich Neimand, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Ed Vytlacil, Jim Walker, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{Gender Differences in\\ the Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, Elizabeth Gunn, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. They also assisted with information on the implementation of the studied interventions. Years of partnership and collaboration have made this work possible. We thank Ruby Zhang for excellent research assistance. Collaboration with Andr\'{e}s Hojman, Ganesh Karapakula, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, and Jake Torcasso on related work has strengthened the analysis in this paper. For helpful comments on various versions of the paper, we thank the editor, three anonymous referees, St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Marco Francesconi, Dana Goldman, Ganesh Karapakula, Sidharth Moktan, Rich Neimand, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Ed Vytlacil, Jim Walker, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -29,7 +29,7 @@ Department of Economics\\
 The University of Chicago \and
 James J. Heckman \\
 American Bar Foundation \\
-Department of Economics\\
+Center for the Economics of Human Development\\
 The University of Chicago \and
 Anna L. Ziff \\
 Center for the Economics of \\
@@ -55,12 +55,13 @@ The University of Chicago}
 \bigskip
 \begin{tabular}{ll}
 Jorge Luis Garc\'{i}a                                       & James J. Heckman \\
-Department of Economics                                & Department of Economics \\
-University of Chicago                                       & University of Chicago \\
-1126 East 59th Street                                     & 1126 East 59th Street \\
-Chicago, IL 60637                                           & Chicago, IL 60637 \\
-Phone: 773-449-0744                                    & Phone: 773-702-0634  \\
-Email: jorgelgarcia@uchicago.edu                       & Email: jjh@uchicago.edu \\
+Department of Economics                                & Center for the Economics of  \\
+University of Chicago                                       & Human Development  \\
+1126 East 59th Street                                     & University of Chicago \\
+Chicago, IL 60637                                           & 1126 East 59th Street \\
+Phone: 773-449-0744                                    & Chicago, IL 60637 \\
+Email: jorgelgarcia@uchicago.edu                       & Phone: 773-702-0634  \\
+									& Email: jjh@uchicago.edu \\
                                                                        & \\
 Anna L. Ziff                                         &  \\
 Center for the Economics of & \\
@@ -97,7 +98,7 @@ Email: aziff@uchicago.edu                     &  \\
 \label{sec:parameters}
 \input{sections/3_parameters}
 
-\section{Estimates and Tests of Treatment Differences}
+\section{Estimates and Tests of Differences in Treatment Effects}
 \label{sec:treatment-effects}
 \input{sections/4_treatment-effects}
 
@@ -105,9 +106,11 @@ Email: aziff@uchicago.edu                     &  \\
 \label{sec:gender-differences}
 \input{sections/5_gender-differences}
 
-\section{Conclusion}
+\section{Summary and Conclusions}
 \label{sec:conclusion}
 \input{sections/6_conclusion}
+
+\clearpage
 
 \singlespacing
 \bibliography{heckman}
