updated referee reports with edits from JJH 6/15

--- a/sections/Comments/EER-Referee-Comments.tex
+++ b/sections/Comments/EER-Referee-Comments.tex
@@ -171,7 +171,7 @@ However, I have three major concerns about the paper as it currently stands. I w
 
 Second, given that gender differences in ABC have indeed previously been documented, the attempt to estimate effects relative to specific counterfactuals (home care, center-based care) becomes a more important aspect of the paper's potential contribution. With this in mind, I think that the authors must really reconcile with Kline and Walters (2016) as well as Feller et al. (2016), who do the same thing (but in different ways) in the context of the Head Start Impact Study. Are they taking a similar approach? If not, does taking the approach of, for example, Kline and Walters (2016), matter for the conclusions?  \textbf{We use matching as a baseline in order to estimate the effect of ABC/CARE relative to different counterfactuals. In Appendix E, we present results from an instrumental variable approach relying on potential shifters of enrollment like presence of relatives or month of birth. The results reported in the appendix are larger than the intent-to-treat estimates, but much less precise. We are more limited in instruments given the small sample and its homogeneity relative to a study like HSIS. With a larger sample, they can also rely on normality, which we do not do. They both find that Head Start has larger gains compared to a home environment. Neither Kline and Walters (2016) nor Feller et al. (2016) present results by gender, so we cannot compare our results exactly. However, one important note is that a lot of the control-group subjects who enrolled in other center-based care actually enrolled in other Head Start programs. Even for those who did not, the standards in the early 2000s for preschools are much higher than those in the 1970s. The difference between ABC/CARE and the alternative center-based programs should be much larger than the difference between Head Start and the alternatives that the HSIS control-group selected into. In addition to not dividing by gender, this could explain the more decisive findings. We have included reference to these papers, and other earlier work (e.g., Heckman, 1992; Heckman, Hohmann, Smith, and Khoo, 2000)  in the introduction and a few sentences addressing this and more explicitly referencing Appendix E.}
 
-Approach aside, the authors seem to be doing a similar dissection of counterfactual care options in their companion paper (Garcia et al. 2017). Is the innovation of the current paper simply that you're doing it by gender?  Why is this important? \textbf{The two papers are quite distinct. This paper is meant to report and summarize the myriad of treatment effects and their sources and to consider the impact of the mode of childcare on estimated treatment effects. We present treatment effects by gender using multiple methods. The companion paper takes these estimates and focuses on the methodology of cost-benefit analysis. That paper also presents results by gender. We have added a few sentences in the introduction to clarify this point.}
+Approach aside, the authors seem to be doing a similar dissection of counterfactual care options in their companion paper (Garcia et al. 2017). Is the innovation of the current paper simply that you're doing it by gender?  Why is this important? \textbf{The two papers are quite distinct. This paper is meant to report and summarize the myriad of treatment effects and their sources and to consider the impact of the mode of alternative childcare on estimated treatment effects. We present treatment effects by gender using multiple methods. The companion paper takes these estimates and focuses on the methodology of cost-benefit analysis. That paper also presents results by gender. We have added a few sentences in the introduction to clarify this point.}
 \end{description}
 
 \textbf{Minor comments}
