adding cover page to referee report

--- a/sections/Comments/EER-Referee-Comments.tex
+++ b/sections/Comments/EER-Referee-Comments.tex
@@ -1,21 +1,34 @@
-\documentclass[12pt]{article}
-
-\usepackage{booktabs}
-\usepackage[margin=1in]{geometry}
-\usepackage{setspace}
-\usepackage{threeparttable}
-
-\newcommand{\mr}{\multirow}
-\newcommand{\mc}{\multicolumn}
-
+\input{../../preamble}
 %\linespread{2}
 
 \begin{document}
 
-\doublespacing
 
-\title{Collated Referee Reports}
+\begin{titlepage}
+\newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
+
+\title{\Large \textbf{Responses for Referees \\ Gender Differences in\\ the Benefits of an Influential Early Childhood Program}.}
+
+\author{
+Jorge Luis Garc\'{i}a\\
+Department of Economics\\
+The University of Chicago \and
+James J. Heckman \\
+American Bar Foundation \\
+Center for the Economics of Human Development\\
+The University of Chicago \and
+Anna L. Ziff \\
+Center for the Economics of \\
+Human Development \\
+The University of Chicago}
+\date{First Draft: January 5, 2016\\ This Draft: \today \\}
+
 \maketitle
+\thispagestyle{empty}
+\restoregeometry
+\end{titlepage}
+
+\restoregeometry
 
 % REVIEWER 2
 
